--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 					   <span>DAO</span> 
 	   			</p>
 
-				   <a class="button stroke smoothscroll" href="https://opensea.io/assets/0xearth" title="">LAND Marketplace</a>
-				   <a class="button stroke smoothscroll" href="https://github.com/dhodge229/Sustain-Web3-hackathon-FOAM" title="">0xMap App</a>
+				   <a class="button stroke" href="https://opensea.io/assets/0xearth" title="">LAND Marketplace</a>
+				   <a class="button stroke" href="https://github.com/dhodge229/Sustain-Web3-hackathon-FOAM" title="">0xMap App</a>
 				   <!-- <a class="button stroke smoothscroll" href="https://0xearth.github.io/map" title="">NFT.Land Map</a> -->
 				   <!-- <a class="button stroke smoothscroll" href="https://opensea.io/account" title="">Manage your Land</a> -->
 				   <!-- <a class="button stroke smoothscroll" href="https://opensea.io/assets/0xearth" title="">Land Marketplace</a> -->
 				   <!-- <a class="button stroke smoothscroll" href="https://mainnet.aragon.org/#/0xearth/" title="">0xEarth DAO</a> -->
-				   <a class="button stroke smoothscroll" href="https://etherscan.com" title="">0xEarth Etherscan</a>
-				   <a class="button stroke smoothscroll" href="https://etherscan.com" title="">LAND Smart Contract Interact</a>
+				   <a class="button stroke" href="https://etherscan.io/token/0x5c1110907a0f0d39b7e3b7bf472981bc19e88a62" title="">0xEarth Etherscan</a>
+				   <a class="button stroke" href="https://oneclickdapp.com/color-pardon/" title="">LAND Smart Contract Interact</a>
 				   <!-- <a class="button stroke smoothscroll" href="https://nft.land" title="">Wrapped Land</a> -->
 				   
 	   		</div>  
