add gitcoin grant button + link

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 	   			</p>
 
 				   <a class="button stroke" href="https://opensea.io/assets/0xearth" title="">LAND Marketplace</a>
+				<a class="button stroke" href="https://gitcoin.co/grants/530/0xearth" title="">Gitcoin Grants</a>
 				   <a class="button stroke" href="https://github.com/dhodge229/Sustain-Web3-hackathon-FOAM" title="">0xMap App</a>
 				   <!-- <a class="button stroke smoothscroll" href="https://0xearth.github.io/map" title="">NFT.Land Map</a> -->
 				   <!-- <a class="button stroke smoothscroll" href="https://opensea.io/account" title="">Manage your Land</a> -->
