update link, dates

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 				   <a class="button stroke" href="https://opensea.io/assets/0xearth" title="">LAND Marketplace</a>
 				<a class="button stroke" href="https://gitcoin.co/grants/530/0xearth" title="">Gitcoin Grants</a>
-				   <a class="button stroke" href="https://github.com/dhodge229/Sustain-Web3-hackathon-FOAM" title="">0xMap App</a>
+				   <a class="button stroke" href="https://play.google.com/store/apps/details?id=com.eth.zeroxmap" title="">ArWrld dApp</a>
 				   <!-- <a class="button stroke smoothscroll" href="https://0xearth.github.io/map" title="">NFT.Land Map</a> -->
 				   <!-- <a class="button stroke smoothscroll" href="https://opensea.io/account" title="">Manage your Land</a> -->
 				   <!-- <a class="button stroke smoothscroll" href="https://opensea.io/assets/0xearth" title="">Land Marketplace</a> -->
@@ -253,11 +253,11 @@
 										<i class="fa fa-briefcase"></i>
 									</div>
 									<div class="timeline-header">
-										<h3>March 27th</h3>
+										<h3>April 6th</h3>
 									</div>
 									<div class="timeline-content">
-										<h4>0xMap Launch</h4>
-										<p>Public launch of the 0xMap Android app. Melding 3d mapping, Augmented Reality, and 0xEarth.</p>
+										<h4>ArWrld Launch</h4>
+										<p>Public launch of the ArWrld Android app. Melding 3d mapping, Augmented Reality, and 0xEarth.</p>
 									</div>
 								</div>
 
@@ -266,7 +266,7 @@
 	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 	   				<div class="timeline-header">
-	   					<h3>April 3rd</h3>
+	   					<h3>April 9th</h3>
 	   				</div>
 	   				<div class="timeline-content">
 	   					<h4>LAND Sale Phase 2</h4>
@@ -281,7 +281,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>April 14th</h3>
+	   					<h3>April 30th</h3>
 	   				</div>
 
 	   				<div class="timeline-content">
